<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:onClick="playSchoolNews">

    <android.support.v7.widget.CardView
        android:id="@+id/schoolnews_card"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="381dp"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/card1_text"
            android:textColor="@color/cardview_text_blue"
            android:textSize="20dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:text="@string/school_activity"
            android:textColor="@color/cardview_text_black"
            android:textSize="17dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="181dp"
            android:layout_marginTop="60dp"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="240dp"
            android:text="@string/time_activity"
            android:textSize="17dp"
            android:padding="5dp"
            android:textColor="@color/cardview_text_black"
            />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="270dp"
            android:text="@string/place_activity"
            android:textSize="17dp"
            android:padding="5dp"
            android:textColor="@color/cardview_text_black"
            />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="320dp"
            android:text="@string/lianjie_activity"
            android:textSize="17dp"
            android:padding="5dp"
            android:textColor="@color/cardview_text_black"
            />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="350dp"
            android:text="@string/xiangqing_activity"
            android:textSize="17dp"
            android:padding="5dp"
            android:textColor="@color/cardview_text_black"
            android:drawableRight="@drawable/forward"
            />
        <TextView
            android:id="@+id/webTextView"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:visibility="invisible"/>

    </android.support.v7.widget.CardView>
</RelativeLayout>