<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Toolbar 有标题 返回图标 start-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/lifepage_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/usual_toolbar_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:title="">

        <TextView
            android:id="@+id/lifepage_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/grid_life"
            android:textSize="@dimen/toolbar_textsize" />
        <!--教育平台标题 end-->

        <!--返回箭头 start-->
        <ImageView
            android:id="@+id/lifepage_back"
            android:layout_width="@dimen/back_arrow"
            android:layout_height="@dimen/back_arrow"
            android:layout_gravity="start"
            android:background="@drawable/ic_back"
            android:onClick="onBack" />
        <!--返回箭头 end-->
    </android.support.v7.widget.Toolbar>
    <!--Toolbar 有标题 返回图标 end-->
    
    <!--Tab控件 start-->
    <android.support.design.widget.TabLayout
        android:id="@+id/lifepage_tab"
        style="@style/Widget.MaterialComponents.TabLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_below="@+id/lifepage_toolbar"
        android:background="@color/white" >

        <!--生活 Tab item-->
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips_life"/>

        <!--校园 Tab item-->
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tips_school" />

        <!--出行 Tab item-->
        <android.support.design.widget.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/tips_walking"/>
    </android.support.design.widget.TabLayout>
    <!--Tab控件 end-->

    <!--ViewPager 实现翻页效果 start-->
    <android.support.v4.view.ViewPager
        android:id="@+id/lifepage_viewpager"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/lifepage_tab">
    </android.support.v4.view.ViewPager>
    <!--ViewPager 实现翻页效果 end-->

</RelativeLayout>