<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--Toolbar 有标题 返回图标 start-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/educationpage_toolbar"
        android:layout_height="@dimen/usual_toolbar_height"
        android:layout_width="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:title="">

        <TextView
            android:id="@+id/educationpage_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/grid_education"
            android:textSize="@dimen/toolbar_textsize" />
        <!--教育平台标题 end-->

        <!--返回箭头 start-->
        <ImageView
            android:id="@+id/educationpage_back"
            android:layout_height="@dimen/back_arrow"
            android:layout_width="@dimen/back_arrow"
            android:layout_gravity="start"
            android:background="@drawable/ic_back"
            android:onClick="onBack" />

        <!--返回箭头 end-->
    </android.support.v7.widget.Toolbar>
    <!--Toolbar 有标题 返回图标 end-->

    <!--style="@style/Widget.MaterialComponents.TabLayout"-->
    <!--Tab控件 start-->
    <android.support.design.widget.TabLayout
        android:id="@+id/educationpage_tab"
        style="@style/Widget.MaterialComponents.TabLayout"
        android:layout_height="@dimen/tab_height"
        android:layout_width="match_parent"
        android:layout_below="@+id/educationpage_toolbar"
        android:background="@color/white">

        <!--关注 TabItem start-->
            <android.support.design.widget.TabItem
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/education_attention" />
        <!--关注 TabItem end-->

        <!--推荐 TabItem start-->
            <android.support.design.widget.TabItem
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/education_recommendation" />
        <!--推荐 TabItem end-->

        <!--我的 TabItem start-->
            <android.support.design.widget.TabItem
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/education_my" />
        <!--我的 TabItem end-->
    </android.support.design.widget.TabLayout>
    <!--Tab控件 end-->

    <!--ViewPager实现翻页效果 start-->
    <android.support.v4.view.ViewPager
        android:id="@+id/educationpage_viewpager"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/educationpage_tab">
    </android.support.v4.view.ViewPager>
    <!--ViewPager实现翻页效果 end-->
</RelativeLayout>