<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/very_light_grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!--顶部工具栏 start-->
    <Toolbar
        android:id="@+id/myinfopage_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/usual_toolbar_height"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:title="">

        <!--设置标题居中 start-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="个人信息"/>
        <!--设置标题居中 end-->
    </Toolbar>
    <!--顶部工具栏 end -->

    <!--第一个相对布局 头像、用户名、手机号 start -->
    <RelativeLayout
        android:id="@+id/myinfopage_firstrl"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/myinfopage_toolbar"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/myinfopage_bar"
        android:clickable="true"
        android:focusable="true"
       >
        <!--头像图片 start-->
        <ImageView
            android:id="@+id/infobar_headimage"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:background="@drawable/image_header"/>
        <!--头像图片 end-->

        <!--昵称 start-->
            <TextView
                android:id="@+id/infobar_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_toEndOf="@+id/infobar_headimage"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textColor="@color/font_color"
                android:text="@string/infobar_username"/>
        <!--昵称 end-->

        <!--联系方式 start-->
        <TextView
            android:id="@+id/infobar_phone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_toEndOf="@+id/infobar_headimage"
            android:layout_marginStart="15dp"
            android:layout_below="@+id/infobar_name"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:textColor="@color/font_color"
            android:text="@string/infobar_phone"
            />
        <!--联系方式 end-->

    </RelativeLayout>
    <!--第一个相对布局 end -->

    <!--自定义infobar 控件 start-->
    <!--关联账号-->
    <com.seuchild.smallseedling.myInfo.item_infobar_view
        android:id="@+id/myinfopage_related"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myinfopage_firstrl"
        android:background="@drawable/myinfopage_bar"
        app:show_bottomline="true"
        app:show_leftimg="@drawable/ic_infobar_related"
        app:show_text="@string/myinfo_relatedaccount"
        android:clickable="true"
        android:focusable="true"
        />
    <!--收藏-->
    <com.seuchild.smallseedling.myInfo.item_infobar_view
        android:id="@+id/myinfopage_collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myinfopage_related"
        android:background="@drawable/myinfopage_bar"
        app:show_bottomline="false"
        app:show_leftimg="@drawable/ic_infobar_collection"
        app:show_text="@string/myinfo_collection"
        android:clickable="true"
        android:focusable="true"
        />

    <!--设置 分割-->
    <com.seuchild.smallseedling.myInfo.item_infobar_view
        android:id="@+id/myinfopage_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myinfopage_collection"
        android:background="@drawable/myinfopage_bar"
        android:layout_marginTop="20dp"
        app:show_bottomline="false"
        app:show_leftimg="@drawable/ic_myinfo_settings"
        app:show_text="@string/myinfo_settings"
        android:clickable="true"
        android:focusable="true"
        />

    <!--版本更新 分割-->
    <com.seuchild.smallseedling.myInfo.item_infobar_view
        android:id="@+id/myinfopage_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myinfopage_settings"
        android:background="@drawable/myinfopage_bar"
        android:layout_marginTop="20dp"
        app:show_bottomline="true"
        app:show_leftimg="@drawable/ic_infobar_update"
        app:show_text="@string/myinfo_version"
        android:clickable="true"
        android:focusable="true"
        />
    <!--关于-->
    <com.seuchild.smallseedling.myInfo.item_infobar_view
        android:id="@+id/myinfopage_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myinfopage_version"
        android:background="@drawable/myinfopage_bar"
        app:show_bottomline="false"
        app:show_leftimg="@drawable/ic_infobar_about"
        app:show_text="@string/myinfo_about"
        android:clickable="true"
        android:focusable="true"/>
    <!--自定义infobar 控件 end-->


    <!--底部导航栏 start-->
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/myinfopage_bnv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:menu="@menu/bottom_navigation_menu">
    </android.support.design.widget.BottomNavigationView>
    <!--底部导航栏 end -->
</RelativeLayout>