<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/personal_ass_abl"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/personal_ass_tb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/usual_toolbar_height"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/Base.Widget.AppCompat.Toolbar">
            <TextView
                android:id="@+id/personal_ass_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/personal_ass_title"
                android:textColor="#333333"
                android:textSize="20sp" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/personal_ass_tv_title"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/personal_ass_til_con"
        android:layout_marginTop="105dp"
        android:text="@string/personal_ass_tv_title"
        android:textSize="20sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/personal_ass_til_title"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/personal_ass_tv_title"
        android:layout_alignEnd="@+id/personal_ass_til_con"
        android:paddingLeft="5dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="156dp"
            android:layout_height="30dp"
            android:background="@drawable/et_border"
            android:inputType="textPersonName"
            android:textColor="#333333"
            android:paddingLeft="5dp"
            android:textSize="10sp"
            android:typeface="serif" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/personal_ass_tv_type"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/personal_ass_tv_title"
        android:layout_marginTop="151dp"
        android:text="@string/personal_ass_type"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/personal_ass_tv_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/personal_ass_tv_title"
        android:layout_marginTop="205dp"
        android:text="@string/personal_ass_me"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/personal_ass_sp"
        android:layout_width="153dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/personal_ass_til_title"
        android:layout_alignRight="@+id/personal_ass_til_con"
        android:layout_alignTop="@+id/personal_ass_tv_type"
        android:layout_marginEnd="2dp"
        android:background="@drawable/spinner_border" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/personal_ass_til_con"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="254dp"
        android:layout_height="208dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/personal_ass_sp_kid"
        android:layout_centerHorizontal="true"
        android:paddingLeft="5dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/personal_ass_con"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="#333333"
            android:textColorHint="#ffffff"
            android:textSize="16sp"
            android:typeface="serif" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/personal_ass_send"
        android:layout_width="123dp"
        android:layout_height="54dp"
        android:layout_below="@+id/personal_ass_til_con"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"

        android:theme="@style/RedButton"
        android:text="@string/personal_ass_send_ass" />

    <Spinner
        android:id="@+id/personal_ass_sp_kid"
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/personal_ass_til_title"
        android:layout_alignTop="@+id/personal_ass_tv_me"
        android:background="@drawable/spinner_border" />
</RelativeLayout>