<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/parent_abl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/usual_toolbar_height"
        android:elevation="8dp"
        android:background="@color/colorPrimaryDark">
        <android.support.v7.widget.Toolbar
            android:id="@+id/parent_tb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/usual_toolbar_height"
            android:theme="@style/Base.Widget.AppCompat.Toolbar"
            app:layout_scrollFlags="scroll|enterAlways">
            <TextView
                android:id="@+id/parent_tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="75dp"

                android:gravity="center"
                android:text="@string/parent_title"
                android:textSize="20sp"
                />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/parent_cv_mom"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/parent_abl"
        android:background="@color/colormenu"
        app:cardElevation="5dp">

        <TextView
            android:id="@+id/tv_mom_name"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginLeft="160dp"
            android:textSize="9pt"
            android:text="@string/mom_name"

            />

        <TextView
            android:id="@+id/tv_mom_phone_num"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="40dp"
            android:text="@string/mom_phone"
            android:textSize="9pt"
            />

        <fragment
            android:id="@+id/mom_frag"
            class="com.baidu.mapapi.map.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="90dp"/>


        <com.seuchild.smallseedling.parent.CircleImageView
            android:id="@+id/parent_imageView_mom"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="60dp"
            android:src="@drawable/ic_parent_head_mom" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="290dp"
        android:layout_below="@+id/parent_abl"
        android:background="@color/colormenu"
        app:cardElevation="5dp">

        <TextView
            android:id="@+id/tv_dad_name"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginLeft="160dp"
            android:textSize="9pt"
            android:text="@string/dad_name"

            />

        <TextView
            android:id="@+id/tv_dad_phone_num"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="40dp"
            android:text="@string/dad_phone"
            android:textSize="9pt"
            />

        <fragment
            android:id="@+id/dad_frag"
            class="com.baidu.mapapi.map.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="90dp"/>


        <com.seuchild.smallseedling.parent.CircleImageView
            android:id="@+id/parent_imageView_dad"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="60dp"
            android:src="@drawable/ic_parent_head_dad" />
    </android.support.v7.widget.CardView>

    <android.support.design.widget.BottomNavigationView
        style="@style/Widget.Design.BottomNavigationView"
        android:id="@+id/parent_bnv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:menu="@menu/bottom_navigation_menu" />


</RelativeLayout>